# KM_Share

./: .Cargo.toml.swp  Cargo.toml  README.md  mouse_share_app.py
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/src/: main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: App.jsx  index.html  package-lock.json  package.json
apps/desktop/ui/src/: App.jsx
core/discovery/src/: lib.rs
core/transport/: Cargo.toml
core/transport/src/: lib.rs
