[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

core-discovery = { path = "../../core/discovery" }
core-transport = { path = "../../core/transport" }
