[package]
name = "smart_kvm"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.8.4", features = [
    "shell-open",
    "window-all",
    "dialog",
    "fs-all",
    "clipboard-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
